# SuperSimpleEngine

./: .gitignore  CMakeLists.txt  DXApp.cpp  DXEngine.code-workspace  DXEngine.cpp  DXWindow.aps  DXWindow.cpp  DXWindow.h  DXWindow.rc  Message.cpp  Message.h  README.md  SSAppWindow.cpp  SSAppWindow.h  SSApplication.cpp  VSProjectGen.bat  VSProjectGen_VS2017.bat  VSProjectGen_VS2019.bat  VSProjectGen_VS2022.bat  resource.h  shader-error.txt
Common/: CMakeLists.txt  DXRenderingThread.cpp  DXRenderingThread.h  SSBufferBase.h  SSCameraBase.cpp  SSCameraBase.h  SSCameraManager.cpp  SSCameraManager.h  SSCommon.cpp  SSCommon.h  SSConstantBufferProxy.h  SSDX11Buffer.h  SSDXTranslator.h  SSEngineBase.cpp  SSEngineBase.h  SSFreeCamera.cpp  SSFreeCamera.h  SSGameModuleMaterial.h  SSGameObject.cpp  SSGameObject.h  SSGameObjectManager.cpp  SSGameObjectManager.h  SSGameScene.cpp  SSGameScene.h  SSGameThread.cpp  SSGameThread.h  SSGameWindow.cpp  SSGameWindow.h  SSISerializable.cpp  SSInputManager.cpp  SSInputManager.h  SSMaterialProxy.h  SSMathHelper.cpp  SSMathHelper.h  SSName.cpp  SSName.h  SSRenderThreadObject.cpp  SSRenderThreadObject.h  SSRenderer.cpp  SSRenderer.h  (+8 more)
Common/DX11/: SSDX11Buffer.h
Console/: Test.h  main.cpp
Core/: CMakeLists.txt  SSCameraBase.cpp  SSCameraBase.h  SSCameraManager.cpp  SSCameraManager.h  SSConatantBufferData.cpp  SSConatantBufferData.h  SSConstantBufferProxy.cpp  SSConstantBufferProxy.h  SSCore.cpp  SSCore.h  SSFileHelper.cpp  SSFileHelper.h  SSFreeCamera.cpp  SSFreeCamera.h  SSFreqUsedNames.cpp  SSFreqUsedNames.h  SSGLTF.cpp  SSGLTF.h  SSISerializable.cpp  SSISerializable.h  SSManagerBase.cpp  SSManagerBase.h  SSMathHelper.cpp  SSMathHelper.h  SSMemoryAllocator.cpp  SSMemoryAllocator.h  SSMeshRenderData.h  SSName.cpp  SSName.h  SSObjectBase.cpp  SSObjectBase.h  SSOrbitCamera.cpp  SSOrbitCamera.h  SSSharedRenderData.cpp  SSSharedRenderData.h  SSTest.cpp  SSTest.h  SSTimer.cpp  SSTimer.h
Engine/: CMakeLists.txt  COMWrapper.cpp  COMWrapper.h  Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  Core.cpp  Core.h  DXBufferBase.cpp  DXBufferBase.h  DXCamera.cpp  DXCamera.h  DXConstantBuffer.cpp  DXConstantBuffer.h  DXCube.cpp  DXCube.h  DXDrawCommand.cpp  DXDrawCommand.h  DXEngine.cpp  DXEngine.h  DXFreeCamera.cpp  DXFreeCamera.h  DXIndexBuffer.cpp  DXIndexBuffer.h  DXMathHelper.cpp  DXMathHelper.h  DXRenderObject.h  DXRenderResource.cpp  DXRenderResource.h  DXRenderingThread.cpp  DXRenderingThread.h  DXResource.h  DXShader.cpp  DXShader.h  DXShaderCompiler.cpp  DXShaderCompiler.h  DXShaderType.h  DXVertexBuffer.cpp  DXVertexBuffer.h  (+144 more)
Engine12/: CMakeLists.txt  SSDX12.cpp  SSDX12.h  SSDX12Buffer.cpp  SSDX12Buffer.h  SSDX12ConstantBuffer.cpp  SSDX12ConstantBuffer.h  SSDX12DescriptorHeap.cpp  SSDX12DescriptorHeap.h  SSDX12IndexBuffer.cpp  SSDX12IndexBuffer.h  SSDX12Resource.cpp  SSDX12Resource.h  SSDX12Shader.cpp  SSDX12Shader.h  SSDX12Texture2D.cpp  SSDX12Texture2D.h  SSDX12TextureCube.cpp  SSDX12TextureCube.h  SSDX12VertexBuffer.cpp  SSDX12VertexBuffer.h  SSEngine12.cpp  SSEngine12.h  SSMeshGeometry.h  SSUploadBuffer.h
GameModule/: CMakeLists.txt  SSBufferBase.h  SSCameraBase.cpp  SSCameraBase.h  SSCameraManager.cpp  SSCameraManager.h  SSCommon.h  SSConstantBufferProxy.cpp  SSConstantBufferProxy.h  SSCube.cpp  SSCube.h  SSCubeScene.cpp  SSCubeScene.h  SSDX11Buffer.cpp  SSDX11Buffer.h  SSDXTranslator.cpp  SSEngineBase.h  SSFreeCamera.cpp  SSFreeCamera.h  SSFreqUsedNames.cpp  SSFreqUsedNames.h  SSGameModule.h  SSGameObject.cpp  SSGameObject.h  SSGameObjectManager.cpp  SSGameObjectManager.h  SSGameScene.cpp  SSGameScene.h  SSGameThread.cpp  SSGameThread.h  SSGameWindow.cpp  SSGameWindow.h  SSISerializable.h  SSInputManager.cpp  SSMaterialProxy.h  SSMathHelper.cpp  SSMathHelper.h  SSMeshRenderData.h  SSName.cpp  SSName.h  (+29 more)
HeaderOnly/: FreqUsedConstantBufferTypes.h  SSISerializable.h  SSVertexTypes.h
Prebaked/: 2DLUT.dds
RenderCore/: CMakeLists.txt  SSBufferBase.cpp  SSBufferBase.h  SSConatantBuffer.h  SSIndexBuffer.h  SSRenderCore.cpp  SSRenderCore.h  SSRenderDevice.h  SSRenderResource.h  SSRenderTargetBase.cpp  SSRenderTargetBase.h  SSRenderThreadObject.h  SSRenderThreadResidentObject.cpp  SSRenderThreadResidentObject.h  SSRenderer.cpp  SSRenderer.h  SSRenderingThread.cpp  SSRenderingThread.h  SSTexture2DBase.cpp  SSTexture2DBase.h  SSVertexBuffer.cpp  SSVertexBuffer.h  SSViewport.cpp  SSViewport.h
Renderer/: CMakeLists.txt  Core.cpp  Core.h  DXConstantBuffer.cpp  DXConstantBuffer.h  SSBufferBase.cpp  SSBufferBase.h  SSConatantBuffer.h  SSConstantBuffer.cpp  SSConstantBuffer.h  SSCubemapRenderTarget.cpp  SSCubemapRenderTarget.h  SSCustomRenderThreadObject.cpp  SSCustomRenderThreadObject.h  SSDX11Buffer.cpp  SSDX11Buffer.h  SSDX11ConstantBuffer.cpp  SSDX11ConstantBuffer.h  SSDX11CubeScene.cpp  SSDX11Device.cpp  SSDX11Device.h  SSDX11Engine.cpp  SSDX11GBuffer.cpp  SSDX11GBuffer.h  SSDX11IndexBuffer.cpp  SSDX11IndexBuffer.h  SSDX11PostProcess.cpp  SSDX11PostProcess.h  SSDX11RenderCommand.h  SSDX11RenderTarget.cpp  SSDX11RenderTarget.h  SSDX11Renderer.cpp  SSDX11Renderer.h  SSDX11Texture2D.cpp  SSDX11Texture2D.h  SSDX11VertexBuffer.cpp  SSDX11VertexBuffer.h  SSDX11Viewport.cpp  SSDX11Viewport.h  SSDXTranslator.cpp  (+79 more)
Resource/ObjMesh/: pistol.mtl  sponza2.mtl
Shader/: 2DLUT.ps  BasicShader.ps  BasicShader.vs  Color.hlsl  CubemapConvolution.ps  CubemapConvolution.vs  CubemapShader.ps  CubemapShader.vs  DeferredLighting.ps  DeferredLighting.vs  DeferredShader.ps  DeferredShader.vs  DepthVisualize.ps  EquirectangleToCubemap.ps  EquirectangleToCubemap.vs  FXAA.ps  GBuffer.ps  GBuffer.vs  GBufferDump.ps  GBufferDump.vs  GBufferInstanced.vs  GBufferMacro.ps  Prefilter.ps  Prefilter.vs  Screen.ps  Screen.vs  ShaderPermutation.json  SimpleShader.ps  SimpleShader.vs  TBNDebug.ps  TBNDebug.vs
Shared/: SSSharedSerializationImplementation.cpp
lib/DirectXTex/: CMakeLists.txt
lib/dx/x64/Lib/: version.txt
lib/simdjson/: CMakeLists.txt  add_cpp_test.cmake  simdjson-flags.cmake  simdjson-user-cmakecache.cmake
